# ---------------------------------------------------------------------------
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
# 
# http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ---------------------------------------------------------------------------

cc_sources = \
    activemq/cmsutil/CmsAccessorTest.cpp \
    activemq/cmsutil/CmsDestinationAccessorTest.cpp \
    activemq/cmsutil/CmsTemplateTest.cpp \
    activemq/cmsutil/DynamicDestinationResolverTest.cpp \
    activemq/cmsutil/SessionPoolTest.cpp \
    activemq/commands/ActiveMQBytesMessageTest.cpp \
    activemq/commands/ActiveMQDestinationTest2.cpp \
    activemq/commands/ActiveMQMapMessageTest.cpp \
    activemq/commands/ActiveMQMessageTest.cpp \
    activemq/commands/ActiveMQQueueTest.cpp \
    activemq/commands/ActiveMQStreamMessageTest.cpp \
    activemq/commands/ActiveMQTempQueueTest.cpp \
    activemq/commands/ActiveMQTempTopicTest.cpp \
    activemq/commands/ActiveMQTextMessageTest.cpp \
    activemq/commands/ActiveMQTopicTest.cpp \
    activemq/commands/BrokerIdTest.cpp \
    activemq/commands/BrokerInfoTest.cpp \
    activemq/commands/XATransactionIdTest.cpp \
    activemq/core/ActiveMQConnectionFactoryTest.cpp \
    activemq/core/ActiveMQConnectionTest.cpp \
    activemq/core/ActiveMQMessageAuditTest.cpp \
    activemq/core/ActiveMQSessionTest.cpp \
    activemq/core/ConnectionAuditTest.cpp \
    activemq/core/FifoMessageDispatchChannelTest.cpp \
    activemq/core/SimplePriorityMessageDispatchChannelTest.cpp \
    activemq/exceptions/ActiveMQExceptionTest.cpp \
    activemq/mock/MockBrokerService.cpp \
    activemq/state/ConnectionStateTest.cpp \
    activemq/state/ConnectionStateTrackerTest.cpp \
    activemq/state/ConsumerStateTest.cpp \
    activemq/state/ProducerStateTest.cpp \
    activemq/state/SessionStateTest.cpp \
    activemq/state/TransactionStateTest.cpp \
    activemq/threads/CompositeTaskRunnerTest.cpp \
    activemq/threads/DedicatedTaskRunnerTest.cpp \
    activemq/threads/SchedulerTest.cpp \
    activemq/transport/IOTransportTest.cpp \
    activemq/transport/TransportRegistryTest.cpp \
    activemq/transport/correlator/ResponseCorrelatorTest.cpp \
    activemq/transport/failover/FailoverTransportTest.cpp \
    activemq/transport/inactivity/InactivityMonitorTest.cpp \
    activemq/transport/mock/MockTransportFactoryTest.cpp \
    activemq/transport/tcp/TcpTransportTest.cpp \
    activemq/util/ActiveMQMessageTransformationTest.cpp \
    activemq/util/AdvisorySupportTest.cpp \
    activemq/util/IdGeneratorTest.cpp \
    activemq/util/LongSequenceGeneratorTest.cpp \
    activemq/util/MarshallingSupportTest.cpp \
    activemq/util/MemoryUsageTest.cpp \
    activemq/util/PrimitiveListTest.cpp \
    activemq/util/PrimitiveMapTest.cpp \
    activemq/util/PrimitiveValueConverterTest.cpp \
    activemq/util/PrimitiveValueNodeTest.cpp \
    activemq/util/URISupportTest.cpp \
    activemq/wireformat/WireFormatRegistryTest.cpp \
    activemq/wireformat/openwire/OpenWireFormatTest.cpp \
    activemq/wireformat/openwire/marshal/BaseDataStreamMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/PrimitiveTypesMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/ActiveMQBlobMessageMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/ActiveMQBytesMessageMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/ActiveMQMapMessageMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/ActiveMQMessageMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/ActiveMQObjectMessageMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/ActiveMQQueueMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/ActiveMQStreamMessageMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/ActiveMQTempQueueMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/ActiveMQTempTopicMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/ActiveMQTextMessageMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/ActiveMQTopicMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/BrokerIdMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/BrokerInfoMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/ConnectionControlMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/ConnectionErrorMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/ConnectionIdMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/ConnectionInfoMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/ConsumerControlMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/ConsumerIdMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/ConsumerInfoMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/ControlCommandMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/DataArrayResponseMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/DataResponseMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/DestinationInfoMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/DiscoveryEventMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/ExceptionResponseMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/FlushCommandMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/IntegerResponseMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/JournalQueueAckMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/JournalTopicAckMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/JournalTraceMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/JournalTransactionMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/KeepAliveInfoMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/LastPartialCommandMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/LocalTransactionIdMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/MessageAckMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/MessageDispatchMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/MessageDispatchNotificationMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/MessageIdMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/MessagePullMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/NetworkBridgeFilterMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/PartialCommandMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/ProducerAckMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/ProducerIdMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/ProducerInfoMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/RemoveInfoMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/RemoveSubscriptionInfoMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/ReplayCommandMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/ResponseMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/SessionIdMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/SessionInfoMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/ShutdownInfoMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/SubscriptionInfoMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/TransactionInfoMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/WireFormatInfoMarshallerTest.cpp \
    activemq/wireformat/openwire/marshal/generated/XATransactionIdMarshallerTest.cpp \
    activemq/wireformat/openwire/utils/BooleanStreamTest.cpp \
    activemq/wireformat/openwire/utils/HexTableTest.cpp \
    activemq/wireformat/openwire/utils/MessagePropertyInterceptorTest.cpp \
    activemq/wireformat/stomp/StompHelperTest.cpp \
    activemq/wireformat/stomp/StompWireFormatFactoryTest.cpp \
    activemq/wireformat/stomp/StompWireFormatTest.cpp \
    decaf/internal/net/URIEncoderDecoderTest.cpp \
    decaf/internal/net/URIHelperTest.cpp \
    decaf/internal/net/ssl/DefaultSSLSocketFactoryTest.cpp \
    decaf/internal/nio/BufferFactoryTest.cpp \
    decaf/internal/nio/ByteArrayBufferTest.cpp \
    decaf/internal/nio/CharArrayBufferTest.cpp \
    decaf/internal/nio/DoubleArrayBufferTest.cpp \
    decaf/internal/nio/FloatArrayBufferTest.cpp \
    decaf/internal/nio/IntArrayBufferTest.cpp \
    decaf/internal/nio/LongArrayBufferTest.cpp \
    decaf/internal/nio/ShortArrayBufferTest.cpp \
    decaf/internal/util/ByteArrayAdapterTest.cpp \
    decaf/internal/util/TimerTaskHeapTest.cpp \
    decaf/internal/util/concurrent/TransferQueueTest.cpp \
    decaf/internal/util/concurrent/TransferStackTest.cpp \
    decaf/io/BufferedInputStreamTest.cpp \
    decaf/io/BufferedOutputStreamTest.cpp \
    decaf/io/ByteArrayInputStreamTest.cpp \
    decaf/io/ByteArrayOutputStreamTest.cpp \
    decaf/io/DataInputStreamTest.cpp \
    decaf/io/DataOutputStreamTest.cpp \
    decaf/io/FilterInputStreamTest.cpp \
    decaf/io/FilterOutputStreamTest.cpp \
    decaf/io/InputStreamReaderTest.cpp \
    decaf/io/InputStreamTest.cpp \
    decaf/io/OutputStreamTest.cpp \
    decaf/io/OutputStreamWriterTest.cpp \
    decaf/io/PushbackInputStreamTest.cpp \
    decaf/io/ReaderTest.cpp \
    decaf/io/WriterTest.cpp \
    decaf/lang/ArrayPointerTest.cpp \
    decaf/lang/BooleanTest.cpp \
    decaf/lang/ByteTest.cpp \
    decaf/lang/CharacterTest.cpp \
    decaf/lang/DoubleTest.cpp \
    decaf/lang/ExceptionTest.cpp \
    decaf/lang/FloatTest.cpp \
    decaf/lang/IntegerTest.cpp \
    decaf/lang/LongTest.cpp \
    decaf/lang/MathTest.cpp \
    decaf/lang/PointerTest.cpp \
    decaf/lang/ShortTest.cpp \
    decaf/lang/StringTest.cpp \
    decaf/lang/SystemTest.cpp \
    decaf/lang/ThreadLocalTest.cpp \
    decaf/lang/ThreadTest.cpp \
    decaf/net/Inet4AddressTest.cpp \
    decaf/net/Inet6AddressTest.cpp \
    decaf/net/InetAddressTest.cpp \
    decaf/net/ServerSocketTest.cpp \
    decaf/net/SocketFactoryTest.cpp \
    decaf/net/SocketTest.cpp \
    decaf/net/URISyntaxExceptionTest.cpp \
    decaf/net/URITest.cpp \
    decaf/net/URLDecoderTest.cpp \
    decaf/net/URLEncoderTest.cpp \
    decaf/net/ssl/SSLSocketFactoryTest.cpp \
    decaf/nio/BufferTest.cpp \
    decaf/security/MessageDigestTest.cpp \
    decaf/security/SecureRandomTest.cpp \
    decaf/util/AbstractCollectionTest.cpp \
    decaf/util/AbstractListTest.cpp \
    decaf/util/AbstractSequentialListTest.cpp \
    decaf/util/ArrayListTest.cpp \
    decaf/util/ArraysTest.cpp \
    decaf/util/BitSetTest.cpp \
    decaf/util/CollectionsTest.cpp \
    decaf/util/DateTest.cpp \
    decaf/util/Endian.cpp \
    decaf/util/HashCodeTest.cpp \
    decaf/util/HashMapTest.cpp \
    decaf/util/HashSetTest.cpp \
    decaf/util/LRUCacheTest.cpp \
    decaf/util/LinkedHashMapTest.cpp \
    decaf/util/LinkedHashSetTest.cpp \
    decaf/util/LinkedListTest.cpp \
    decaf/util/ListTest.cpp \
    decaf/util/PriorityQueueTest.cpp \
    decaf/util/PropertiesTest.cpp \
    decaf/util/QueueTest.cpp \
    decaf/util/RandomTest.cpp \
    decaf/util/SetTest.cpp \
    decaf/util/StlMapTest.cpp \
    decaf/util/StringTokenizerTest.cpp \
    decaf/util/TimerTest.cpp \
    decaf/util/UUIDTest.cpp \
    decaf/util/concurrent/AbstractExecutorServiceTest.cpp \
    decaf/util/concurrent/ConcurrentHashMapTest.cpp \
    decaf/util/concurrent/ConcurrentStlMapTest.cpp \
    decaf/util/concurrent/CopyOnWriteArrayListTest.cpp \
    decaf/util/concurrent/CopyOnWriteArraySetTest.cpp \
    decaf/util/concurrent/CountDownLatchTest.cpp \
    decaf/util/concurrent/ExecutorsTest.cpp \
    decaf/util/concurrent/ExecutorsTestSupport.cpp \
    decaf/util/concurrent/FutureTaskTest.cpp \
    decaf/util/concurrent/LinkedBlockingQueueTest.cpp \
    decaf/util/concurrent/MutexTest.cpp \
    decaf/util/concurrent/SemaphoreTest.cpp \
    decaf/util/concurrent/SynchronousQueueTest.cpp \
    decaf/util/concurrent/ThreadPoolExecutorTest.cpp \
    decaf/util/concurrent/TimeUnitTest.cpp \
    decaf/util/concurrent/atomic/AtomicBooleanTest.cpp \
    decaf/util/concurrent/atomic/AtomicIntegerTest.cpp \
    decaf/util/concurrent/atomic/AtomicReferenceTest.cpp \
    decaf/util/concurrent/locks/AbstractQueuedSynchronizerTest.cpp \
    decaf/util/concurrent/locks/LockSupportTest.cpp \
    decaf/util/concurrent/locks/ReentrantLockTest.cpp \
    decaf/util/concurrent/locks/ReentrantReadWriteLockTest.cpp \
    decaf/util/zip/Adler32Test.cpp \
    decaf/util/zip/CRC32Test.cpp \
    decaf/util/zip/CheckedInputStreamTest.cpp \
    decaf/util/zip/CheckedOutputStreamTest.cpp \
    decaf/util/zip/DeflaterOutputStreamTest.cpp \
    decaf/util/zip/DeflaterTest.cpp \
    decaf/util/zip/InflaterInputStreamTest.cpp \
    decaf/util/zip/InflaterTest.cpp \
    main.cpp \
    testRegistry.cpp \
    util/teamcity/TeamCityProgressListener.cpp


h_sources = \
    activemq/cmsutil/CmsAccessorTest.h \
    activemq/cmsutil/CmsDestinationAccessorTest.h \
    activemq/cmsutil/CmsTemplateTest.h \
    activemq/cmsutil/DummyConnection.h \
    activemq/cmsutil/DummyConnectionFactory.h \
    activemq/cmsutil/DummyConsumer.h \
    activemq/cmsutil/DummyMessage.h \
    activemq/cmsutil/DummyMessageCreator.h \
    activemq/cmsutil/DummyProducer.h \
    activemq/cmsutil/DummySession.h \
    activemq/cmsutil/DynamicDestinationResolverTest.h \
    activemq/cmsutil/MessageContext.h \
    activemq/cmsutil/SessionPoolTest.h \
    activemq/commands/ActiveMQBytesMessageTest.h \
    activemq/commands/ActiveMQDestinationTest2.h \
    activemq/commands/ActiveMQMapMessageTest.h \
    activemq/commands/ActiveMQMessageTest.h \
    activemq/commands/ActiveMQQueueTest.h \
    activemq/commands/ActiveMQStreamMessageTest.h \
    activemq/commands/ActiveMQTempQueueTest.h \
    activemq/commands/ActiveMQTempTopicTest.h \
    activemq/commands/ActiveMQTextMessageTest.h \
    activemq/commands/ActiveMQTopicTest.h \
    activemq/commands/BrokerIdTest.h \
    activemq/commands/BrokerInfoTest.h \
    activemq/commands/XATransactionIdTest.h \
    activemq/core/ActiveMQConnectionFactoryTest.h \
    activemq/core/ActiveMQConnectionTest.h \
    activemq/core/ActiveMQMessageAuditTest.h \
    activemq/core/ActiveMQSessionTest.h \
    activemq/core/ConnectionAuditTest.h \
    activemq/core/FifoMessageDispatchChannelTest.h \
    activemq/core/SimplePriorityMessageDispatchChannelTest.h \
    activemq/exceptions/ActiveMQExceptionTest.h \
    activemq/mock/MockBrokerService.h \
    activemq/state/ConnectionStateTest.h \
    activemq/state/ConnectionStateTrackerTest.h \
    activemq/state/ConsumerStateTest.h \
    activemq/state/ProducerStateTest.h \
    activemq/state/SessionStateTest.h \
    activemq/state/TransactionStateTest.h \
    activemq/threads/CompositeTaskRunnerTest.h \
    activemq/threads/DedicatedTaskRunnerTest.h \
    activemq/threads/SchedulerTest.h \
    activemq/transport/IOTransportTest.h \
    activemq/transport/TransportRegistryTest.h \
    activemq/transport/correlator/ResponseCorrelatorTest.h \
    activemq/transport/failover/FailoverTransportTest.h \
    activemq/transport/inactivity/InactivityMonitorTest.h \
    activemq/transport/mock/MockTransportFactoryTest.h \
    activemq/transport/tcp/TcpTransportTest.h \
    activemq/util/ActiveMQMessageTransformationTest.h \
    activemq/util/AdvisorySupportTest.h \
    activemq/util/IdGeneratorTest.h \
    activemq/util/LongSequenceGeneratorTest.h \
    activemq/util/MarshallingSupportTest.h \
    activemq/util/MemoryUsageTest.h \
    activemq/util/PrimitiveListTest.h \
    activemq/util/PrimitiveMapTest.h \
    activemq/util/PrimitiveValueConverterTest.h \
    activemq/util/PrimitiveValueNodeTest.h \
    activemq/util/URISupportTest.h \
    activemq/wireformat/WireFormatRegistryTest.h \
    activemq/wireformat/openwire/OpenWireFormatTest.h \
    activemq/wireformat/openwire/marshal/BaseDataStreamMarshallerTest.h \
    activemq/wireformat/openwire/marshal/PrimitiveTypesMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/ActiveMQBlobMessageMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/ActiveMQBytesMessageMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/ActiveMQMapMessageMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/ActiveMQMessageMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/ActiveMQObjectMessageMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/ActiveMQQueueMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/ActiveMQStreamMessageMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/ActiveMQTempQueueMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/ActiveMQTempTopicMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/ActiveMQTextMessageMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/ActiveMQTopicMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/BrokerIdMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/BrokerInfoMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/ConnectionControlMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/ConnectionErrorMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/ConnectionIdMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/ConnectionInfoMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/ConsumerControlMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/ConsumerIdMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/ConsumerInfoMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/ControlCommandMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/DataArrayResponseMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/DataResponseMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/DestinationInfoMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/DiscoveryEventMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/ExceptionResponseMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/FlushCommandMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/IntegerResponseMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/JournalQueueAckMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/JournalTopicAckMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/JournalTraceMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/JournalTransactionMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/KeepAliveInfoMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/LastPartialCommandMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/LocalTransactionIdMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/MessageAckMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/MessageDispatchMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/MessageDispatchNotificationMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/MessageIdMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/MessagePullMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/NetworkBridgeFilterMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/PartialCommandMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/ProducerAckMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/ProducerIdMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/ProducerInfoMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/RemoveInfoMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/RemoveSubscriptionInfoMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/ReplayCommandMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/ResponseMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/SessionIdMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/SessionInfoMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/ShutdownInfoMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/SubscriptionInfoMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/TransactionInfoMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/WireFormatInfoMarshallerTest.h \
    activemq/wireformat/openwire/marshal/generated/XATransactionIdMarshallerTest.h \
    activemq/wireformat/openwire/utils/BooleanStreamTest.h \
    activemq/wireformat/openwire/utils/HexTableTest.h \
    activemq/wireformat/openwire/utils/MessagePropertyInterceptorTest.h \
    activemq/wireformat/stomp/StompHelperTest.h \
    activemq/wireformat/stomp/StompWireFormatFactoryTest.h \
    activemq/wireformat/stomp/StompWireFormatTest.h \
    decaf/internal/net/URIEncoderDecoderTest.h \
    decaf/internal/net/URIHelperTest.h \
    decaf/internal/net/ssl/DefaultSSLSocketFactoryTest.h \
    decaf/internal/nio/BufferFactoryTest.h \
    decaf/internal/nio/ByteArrayBufferTest.h \
    decaf/internal/nio/CharArrayBufferTest.h \
    decaf/internal/nio/DoubleArrayBufferTest.h \
    decaf/internal/nio/FloatArrayBufferTest.h \
    decaf/internal/nio/IntArrayBufferTest.h \
    decaf/internal/nio/LongArrayBufferTest.h \
    decaf/internal/nio/ShortArrayBufferTest.h \
    decaf/internal/util/ByteArrayAdapterTest.h \
    decaf/internal/util/TimerTaskHeapTest.h \
    decaf/internal/util/concurrent/TransferQueueTest.h \
    decaf/internal/util/concurrent/TransferStackTest.h \
    decaf/io/BufferedInputStreamTest.h \
    decaf/io/BufferedOutputStreamTest.h \
    decaf/io/ByteArrayInputStreamTest.h \
    decaf/io/ByteArrayOutputStreamTest.h \
    decaf/io/DataInputStreamTest.h \
    decaf/io/DataOutputStreamTest.h \
    decaf/io/FilterInputStreamTest.h \
    decaf/io/FilterOutputStreamTest.h \
    decaf/io/InputStreamReaderTest.h \
    decaf/io/InputStreamTest.h \
    decaf/io/OutputStreamTest.h \
    decaf/io/OutputStreamWriterTest.h \
    decaf/io/PushbackInputStreamTest.h \
    decaf/io/ReaderTest.h \
    decaf/io/WriterTest.h \
    decaf/lang/ArrayPointerTest.h \
    decaf/lang/BooleanTest.h \
    decaf/lang/ByteTest.h \
    decaf/lang/CharacterTest.h \
    decaf/lang/DoubleTest.h \
    decaf/lang/ExceptionTest.h \
    decaf/lang/FloatTest.h \
    decaf/lang/IntegerTest.h \
    decaf/lang/LongTest.h \
    decaf/lang/MathTest.h \
    decaf/lang/PointerTest.h \
    decaf/lang/ShortTest.h \
    decaf/lang/StringTest.h \
    decaf/lang/SystemTest.h \
    decaf/lang/ThreadLocalTest.h \
    decaf/lang/ThreadTest.h \
    decaf/net/Inet4AddressTest.h \
    decaf/net/Inet6AddressTest.h \
    decaf/net/InetAddressTest.h \
    decaf/net/ServerSocketTest.h \
    decaf/net/SocketFactoryTest.h \
    decaf/net/SocketTest.h \
    decaf/net/URISyntaxExceptionTest.h \
    decaf/net/URITest.h \
    decaf/net/URLDecoderTest.h \
    decaf/net/URLEncoderTest.h \
    decaf/net/ssl/SSLSocketFactoryTest.h \
    decaf/nio/BufferTest.h \
    decaf/security/MessageDigestTest.h \
    decaf/security/SecureRandomTest.h \
    decaf/util/AbstractCollectionTest.h \
    decaf/util/AbstractListTest.h \
    decaf/util/AbstractSequentialListTest.h \
    decaf/util/ArrayListTest.h \
    decaf/util/ArraysTest.h \
    decaf/util/BitSetTest.h \
    decaf/util/CollectionsTest.h \
    decaf/util/DateTest.h \
    decaf/util/Endian.h \
    decaf/util/HashCodeTest.h \
    decaf/util/HashMapTest.h \
    decaf/util/HashSetTest.h \
    decaf/util/LRUCacheTest.h \
    decaf/util/LinkedHashMapTest.h \
    decaf/util/LinkedHashSetTest.h \
    decaf/util/LinkedListTest.h \
    decaf/util/ListTest.h \
    decaf/util/PriorityQueueTest.h \
    decaf/util/PropertiesTest.h \
    decaf/util/QueueTest.h \
    decaf/util/RandomTest.h \
    decaf/util/SetTest.h \
    decaf/util/StlMapTest.h \
    decaf/util/StringTokenizerTest.h \
    decaf/util/TimerTest.h \
    decaf/util/UUIDTest.h \
    decaf/util/concurrent/AbstractExecutorServiceTest.h \
    decaf/util/concurrent/ConcurrentHashMapTest.h \
    decaf/util/concurrent/ConcurrentStlMapTest.h \
    decaf/util/concurrent/CopyOnWriteArrayListTest.h \
    decaf/util/concurrent/CopyOnWriteArraySetTest.h \
    decaf/util/concurrent/CountDownLatchTest.h \
    decaf/util/concurrent/ExecutorsTest.h \
    decaf/util/concurrent/ExecutorsTestSupport.h \
    decaf/util/concurrent/FutureTaskTest.h \
    decaf/util/concurrent/LinkedBlockingQueueTest.h \
    decaf/util/concurrent/MutexTest.h \
    decaf/util/concurrent/SemaphoreTest.h \
    decaf/util/concurrent/SynchronousQueueTest.h \
    decaf/util/concurrent/ThreadPoolExecutorTest.h \
    decaf/util/concurrent/TimeUnitTest.h \
    decaf/util/concurrent/atomic/AtomicBooleanTest.h \
    decaf/util/concurrent/atomic/AtomicIntegerTest.h \
    decaf/util/concurrent/atomic/AtomicReferenceTest.h \
    decaf/util/concurrent/locks/AbstractQueuedSynchronizerTest.h \
    decaf/util/concurrent/locks/LockSupportTest.h \
    decaf/util/concurrent/locks/ReentrantLockTest.h \
    decaf/util/concurrent/locks/ReentrantReadWriteLockTest.h \
    decaf/util/zip/Adler32Test.h \
    decaf/util/zip/CRC32Test.h \
    decaf/util/zip/CheckedInputStreamTest.h \
    decaf/util/zip/CheckedOutputStreamTest.h \
    decaf/util/zip/DeflaterOutputStreamTest.h \
    decaf/util/zip/DeflaterTest.h \
    decaf/util/zip/InflaterInputStreamTest.h \
    decaf/util/zip/InflaterTest.h \
    util/teamcity/TeamCityProgressListener.h


## Compile this as part of make check
check_PROGRAMS = activemq-test

## Also run the tests as part of make check
## TESTS = $(check_PROGRAMS)

## 
## Compiler/Linker Options
##
activemq_test_SOURCES = $(cc_sources)
activemq_test_CXXFLAGS = $(AMQ_TEST_CXXFLAGS) -I$(srcdir)/../main @CPPUNIT_CFLAGS@
activemq_test_LDADD= $(AMQ_TEST_LIBS) @CPPUNIT_LIBS@ 
